# airQualityProject

./: CMakeLists.txt  Marker.qml  README.md  air.pro  app.cpp  app.h  calculation.cpp  calculation.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.qml  map.qmlc  marker.cpp  marker.h  read.cpp  read.h  resource.qrc
SOE_Documents/: Air Quality Management.pptx  System Specification.docx  UML Diagram and Textual Explanation.docx
SourceCode/: CMakeCache.txt  Makefile  Marker.qmlc  README.md  cmake_install.cmake  machine.txt
SourceCode/include/: mainwindow.h  moc_app.cpp_parameters  moc_calculation.cpp_parameters  moc_mainwindow.cpp_parameters  moc_marker.cpp_parameters  moc_read.cpp_parameters  read.h
SourceCode/src/: Marker.qmlc  mainwindow.cpp  mainwindow.ui  map.qml  map.qmlc  read.cpp  resource.qrc
air/: app.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.qmlc  marker.cpp  marker.h
airQuality/: airQuality.pro
airQualityRelease/: CMakeCache.txt  Makefile  airQualityProject.cbp  airQualityProject_node  cmake_install.cmake  moc_app.cpp  moc_app.cpp_parameters  moc_calculation.cpp  moc_calculation.cpp_parameters  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters  moc_marker.cpp  moc_marker.cpp_parameters  moc_read.cpp_parameters  output.txt
airQualityRelease/airQualityProject_autogen/include/: ui_mainwindow.h
airQualityRelease/airQualityProject_node_autogen/: moc_predefs.h
airQualityTest/: CMakeLists.txt  tst_validation.cpp
build-air-Desktop-Debug/: Makefile  moc_mainwindow.cpp  moc_marker.cpp  ui_mainwindow.h
include/: app.h  mainwindow.h
src/: Marker.qml  Marker.qmlc  main.cpp  mainwindow.cpp  map.qmlc
src/airquality/: CMakeLists.txt  package.xml
src/airquality/include/: app.h  mainwindow.h  serialconnection.h
src/airquality/src/: Peta.qml  Peta.qmlc  app.cpp  asv.cpp  mainwindow.cpp  resource.qrc
src/airquality/ui/: mainwindow.ui
untitled/: untitled.pro
